--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="input-row">
       <label>Local Price Scalar</label>
       <input id="scalar" type="number" step="0.01" value="1.00" />
-      <small>Use 1.10 if electricity is ~10% higher than RECS average</small>
+      <small>Use 1.10 if electricity is ~10% higher than RECS average (Texas)</small>
     </div>
 
     <button id="calc">Calculate</button>
