--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Home Energy Cost Estimator</title>
+  <title>Texas Home Energy Cost Estimator</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <div class="wrapper">
-    <h1>Home Energy Cost Estimator</h1>
-    <p>RECS 2020 (South Region) • Age + Square Footage • 95% CI</p>
+    <h1>Texas Home Energy Cost Estimator</h1>
+    <p>Based on 2020 RECS (South) + Texas price adjustment • Includes seasonal profile</p>
 
     <div class="input-row">
       <label>Year Built</label>
@@ -22,17 +23,26 @@
     </div>
 
     <div class="input-row">
-      <label>Local Price Scalar</label>
-      <input id="scalar" type="number" step="0.01" value="1.00" />
-      <small>Use 1.10 if electricity is ~10% higher than RECS average (Texas)</small>
+      <label>Local Price Scalar (Texas default = 1.10)</label>
+      <input id="scalar" type="number" step="0.01" value="1.10" />
+      <small>Leave at 1.10 for a typical Texas home, change if you know your area is cheaper or more expensive.</small>
     </div>
 
     <button id="calc">Calculate</button>
 
     <h2>Results</h2>
     <div id="result" class="result"></div>
+
+    <h2>Seasonal Monthly Bill Profile</h2>
+    <p class="chart-caption">
+      Estimated monthly electricity + other energy spending for this home, assuming typical Texas seasonal usage.
+    </p>
+    <div class="chart-container">
+      <canvas id="seasonChart"></canvas>
+    </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
