--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <title>Texas Home Energy Cost Estimator</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </head>
 
 <body>
