--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
     <div class="chart-container">
       <canvas id="seasonChart"></canvas>
     </div>
+    <div class="disclaimer">
+  <strong>Temperature disclaimer:</strong>
+  <p>
+    These estimates are based on U.S. RECS 2020 data for the South region
+    (which includes Texas). That dataset reflects homes kept at typical
+    occupied comfort temperatures, roughly low-70s °F in winter and
+    mid-70s °F in summer.
+  </p>
+  <p>
+    Actual energy use may be higher or lower if a home is kept
+    significantly colder or warmer than this range (for example, running
+    summer AC below about 72°F or winter heat above about 75°F), or if
+    HVAC systems run more often than in a typical household.
+  </p>
+</div>
+
   </div>
 
   <script src="script.js"></script>
