--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <p>
     Actual energy use may be higher or lower if a home is kept
     significantly colder or warmer than this range (for example, running
-    summer AC below about 72°F or winter heat above about 75°F), or if
+    summer AC at or below 72°F, or winter heat above about 75°F), or if
     HVAC systems run more often than in a typical household.
   </p>
 </div>
